# auto-loan-agent

./: .env.example  .gitignore  LICENSE  README.md  langgraph.json  loan_workflow_orchestrator.py  pyproject.toml  stip_agent.py
evals/: create_dataset.py  evaluators.py  run_experiment.py
frontend/: README.md  app.py
utils/: mock_apis.py  prompts.py  schemas.py
